# LBImproved-cuda

./: CMakeLists.txt  README.md
src/: Envelope.cu  LB_Improved.cu  LB_Keogh.cu  NearestNeighbor.cu  dtw.cu  main.cu
src/include/: Envelope.h  LB_Improved.h  LB_Keogh.h  NearestNeighbor.h  dtw.h  dtw_origin.h
test/: dtw_unit_test.cu  test_LB.cu  test_LBImproved.cu  test_envelope.cu
